// proto-service
syntax = "proto3";
package go.microservice.btchdwallet;

option go_package = "github.com/LuisAcerv/btchdwallet";

service Wallet {
    rpc CreateWallet(Request)      returns (Response) {}
    rpc CreateChildWallet(Request) returns (Response) {}
    rpc GetWallet(Request)         returns (Response) {}
}

message Request {
    string Name      = 1;
    string Mnemonic  = 2;
}


message Response {
    string Name     = 1;
    string Address  = 2;
    string PubKey   = 3;
    string PrivKey  = 4;
    string Mnemonic = 5;
    float  Balance  = 6;
}